Integrate AI recomendationMovie and add Security for API